# BioClaw

./: .gitignore  README.md  pyproject.toml
bio_components/molecules/: antibody.yaml  antigen.yaml  dna.yaml  gene.yaml  plasmid.yaml  rna-transcript.yaml
bio_components/organelles/: cytoskeleton.yaml  endoplasmic-reticulum.yaml  golgi-apparatus.yaml  lysosome.yaml  mitochondria.yaml  nucleus.yaml  plasma-membrane.yaml  ribosome.yaml
bio_components/organism/: product-organism.yaml
bio_components/processes/: apoptosis.yaml  autophagy.yaml  growth-cycle.yaml  immune-response.yaml  meiosis.yaml  mitosis.yaml  product-workflow.yaml  splicing.yaml  transcription.yaml  translation.yaml
bioscaffold/: __init__.py  __main__.py  all_generation.py  assembly.py  audit.py  autonomy.py  cards.py  cell.py  checkpoints.py  cli.py  compiler.py  cytoskeleton.py  delivery.py  expression.py  generations.py  genome.py  growth.py  immune.py  lifecycle.py  lysosome.py  membrane.py  microtasks.py  mitochondria.py  molecules.py  nucleus.py  organism.py  proposals.py  reproduction.py  ribosome.py  turns.py  types.py  validation.py  workflow.py
tests/: test_all_generation_workflow.py  test_apoptosis_protocol.py  test_audit.py  test_autonomous_session.py  test_card_registry.py  test_cell_cycle.py  test_cli.py  test_component_cards.py  test_expression.py  test_generations.py  test_growth.py  test_microtasks.py  test_mitosis_protocol.py  test_molecules_immune.py  test_organism.py  test_runtime_services.py  test_turns.py  test_workflow.py
(+15 files in other folders)
